objects/privateAppEx__Listing__c.object
<CustomObject>
    <description>Language-specific content for an app in the store.</description>
    <fields>
        <fullName>privateAppEx__App__c</fullName>
        <description>The app that is listed.</description>
        <inlineHelpText>The app that is listed.</inlineHelpText>
        <label>App</label>
        <referenceTo>privateAppEx__App__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>privateAppEx__BannerAttachmentId__c</fullName>
        <description>The ID of the banner attachment for the listing.</description>
        <inlineHelpText>The ID of the banner attachment for the listing.</inlineHelpText>
        <label>Banner Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Description__c</fullName>
        <description>A text description of the app, written in the specified language.</description>
        <inlineHelpText>A text description of the app, written in the specified language.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Language__c</fullName>
        <description>The language for the listing. When viewing the store, users see listings matching their language.</description>
        <inlineHelpText>The language for the listing. When viewing the store, users see listings matching their language.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privateAppEx__ListedDate__c</fullName>
        <description>The date when the listing was first published in the store.</description>
        <inlineHelpText>The date when the listing was first published in the store.</inlineHelpText>
        <label>Listed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PageViewsAllTime__c</fullName>
        <description>The number of page views on the listing for all time.</description>
        <inlineHelpText>The number of page views on the listing for all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summaryFilterItems>
            <field>privateAppEx__ListingActivity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PageView</value>
        </summaryFilterItems>
        <summaryForeignKey>privateAppEx__ListingActivity__c.privateAppEx__Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PageViews__c</fullName>
        <description>Page views of the listing in the last 30 days.</description>
        <inlineHelpText>Page views of the listing in the last 30 days.</inlineHelpText>
        <label>Page Views (30 Days)</label>
        <summarizedField>privateAppEx__ListingPopularity__c.privateAppEx__PageViews__c</summarizedField>
        <summaryForeignKey>privateAppEx__ListingPopularity__c.privateAppEx__Listing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PopularityAllTime__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for all time.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for all time.</inlineHelpText>
        <label>Popularity (All Time)</label>
        <summaryFilterItems>
            <field>privateAppEx__ListingActivity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RequestInstall</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>privateAppEx__ListingActivity__c.privateAppEx__Duplicate__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>privateAppEx__ListingActivity__c.privateAppEx__Listing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Popularity__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for last 30 days.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for last 30 days.</inlineHelpText>
        <label>Popularity (30 Days)</label>
        <summarizedField>privateAppEx__ListingPopularity__c.privateAppEx__RequestsInstalls__c</summarizedField>
        <summaryForeignKey>privateAppEx__ListingPopularity__c.privateAppEx__Listing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Requirements__c</fullName>
        <description>The requirements (e.g. devices, operating systems, browsers) needed to use this app, written in the specified language.</description>
        <inlineHelpText>The requirements (e.g. devices, operating systems, browsers) needed to use this app, written in the specified language.</inlineHelpText>
        <label>Requirements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Status__c</fullName>
        <description>Status indicates the current state of the listing.</description>
        <inlineHelpText>Status indicates the current state of the listing.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privateAppEx__Tagline__c</fullName>
        <description>Brief tagline describing the listing.</description>
        <inlineHelpText>Brief tagline describing the listing.</inlineHelpText>
        <label>Tagline</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__isDefaultAppListing__c</fullName>
        <description>Indicates if the listing is the default listing for its associated app.</description>
        <formula>Id  =  privateAppEx__App__r.privateAppEx__DefaultListing__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the listing is the default listing for its associated app.</inlineHelpText>
        <label>Default App Listing</label>
        <type>Checkbox</type>
    </fields>
    <label>Listing</label>
    <listViews>
        <fullName>privateAppEx__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>